
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2020 JUL 06a
  * in lib/soap/soap.c
    - in functions_builtin(), changed the double format of the spline function to the standard
      DOUBLEFORMAT
    - in SOAP_process_code(), added substitute_functions() just before update_var() to 
      speed up the processing of function calls with a large number of arguments
      (Prasanna Rajendran contribution)
      

2020 JUL 03a
  * in model/chem/
    - added _H2_Air_9s_Smith
  * in model/chem/_Air_Plasma_11s_31r_Dunn-Kang/chem.c
    - in find_Qei() and find_dQei_dx(), removed ionization energies due to electron impact
    

2020 JUL 02a
  * in model/chem/_Cs_Air_Plasma_13s_Lenard/chem.c
    - re-ordered the reactions so that the ones involving Cesium are all located at the end
  * in model/chem/_Cs_Air_Plasma_13s_Lenard/doc/report.tex
    - re-ordered the reactions so that the ones involving Cesium are all located at the end
    

2020 JUL 01b
  * in cycle/share/cycle_share.c
    - in function exchange_U(), added threading of find_prim_fluid() by Minindu Weerakoon
    

2020 JUL 01a
  * in model/chem/*/chem.c
    - added find_Qei() and find_dQei_dx()
  * in model/fluid/*/fluid_source.c and model/fluid/_drift-diffusion/fluid.c
    - in test_dSchem_dU(), added gl->cycle.fluid.Uref as first argument to test_dW_dx()
  * in model/fluid/*_plasma/fluid_source.c
    - in find_Se(), added call to find_Qei() and removed pre-existing code that found Qei
    - in find_dSe_dU_transport(), added call to find_dQei_dx() and removed pre-existing code
      that found dQei_drhok
  * in model/share/chem_share.c 
    - in test_dW_dx(), added parameter rhokref and made drhok function of rhokref