@@ -1,0 +1,191 @@
+@book{gen:anderson2,
+        author = "Anderson, J. D.",
+        TITLE = "Hypersonic and High-Temperature Gas Dynamics",
+        publisher = "McGraw-Hill",
+        year = 1989
+        }
+@conference{nasa:1973:dunn,
+        author = "Dunn, M. G. AND Kang, S. W.",
+        TITLE = "Theroretical and Experimental Studies of Reentry Plasmas",
+        booktitle = "NASA CR-2232",
+        year = 1973,
+        }
+@conference{chem:jachimowsky,
+        author = "Jachimowsky, C. J.",
+        TITLE = "An Analytical Study of the Hydrogen-Air Reaction
+          Mechanism With Application To Scramjet Combustion",
+        booktitle = "NASA TP-2791" ,
+        year = 1988,
+        }
+@incollection{book:1987:mantsakanyan,
+        author = "Mantsakanyan, A. Kh. AND Naidis, G. V.",
+        TITLE = "Processes of Formation and Decay of Charged Particles in Nitrogen-Oxygen Plasmas",
+        booktitle = "Khimiia Plazmy [Plasma Chemistry]",
+        editor = "B. M. Smirnov",
+        publisher = "Energoatomizdat",
+        address = "Moscow, Russia",
+        volume = 14,
+        pages = "227--255",
+        year = 1987
+        }
+@incollection{book:1987:krivonosova,
+        author = "Krivonosova, O. E. AND Losev, S. A. AND Nalivayko, V. P. AND Mukoseev, Yu. K. AND Shatalov, O. P.",
+        TITLE = "",
+        booktitle = "Khimiia Plazmy [Plasma Chemistry]",
+        editor = "B. M. Smirnov",
+        publisher = "Energoatomizdat",
+        address = "Moscow, Russia",
+        volume = 14,
+        pages = "3",
+        year = 1987
+        }
+@book{book:1982:bychkov,
+        author = "Bychkov, Yu. I. AND Korolev, Yu. D. AND Mesyats, G. A.",
+        title = "Inzhektsionnaia Gazovaia Elektronika",
+	note = "(Injection Gaseous Electronics, in Russian)",
+        publisher = "Nauka",
+	address = "Novosibirsk, Russia",
+        year = 1982
+        }
+@book{book:1991:raizer,
+        author = "Raizer, Yu. P.",
+        title = "Gas Discharge Physics",
+        publisher = "Springer-Verlag",
+	address = "Berlin, Germany",
+        year = 1991
+        }
+@article{misc:1978:son,
+        author = "Son, E. E.",
+        TITLE = "Effect of Vibrational Temperature on the Rate of Electronic Excitation of Diatomic Molecules",
+        journal = "High Temperature",
+        volume = 16,
+        number = 6,
+        pages = "1162--1166",
+        year = 1978
+        }
+@article{misc:1978:aleksandrov,
+        author = "Aleksandrov, N. L. AND Konchakov, A. M. AND Son, E. E.",
+        TITLE = "Electron Distribution Function and Kinetic Coefficients of a Nitrogen Plasma -- I. Unexcited Molecules. II. Vibrationally Excited Molecules",
+        journal = "Soviet Journal of Plasma Physics",
+        volume = 4,
+        number = 1,
+        pages = "98--102, 663--666",
+        year = 1978
+        }
+@article{misc:1983:gallagher,
+        author = "Gallagher, J. W. AND Beaty, E. C. AND Dutton, J. AND Pitchford, L. C.",
+        TITLE = "An Annotated Compilation and Appraisal of Swarm Data  in Electronegative Cases",
+        journal = "Journal of Physical and Chemical Reference Data",
+        volume = 12,
+        number = 1,
+        pages = "109--152",
+        year = 1983
+        }
+@article{misc:1975:dutton,
+        author = "Dutton, J.",
+        TITLE = "A Survey of Electron Swarm Data",
+        journal = "Journal of Physical and Chemical Reference Data",
+        volume = 4,
+        number = 3,
+        pages = "577--856",
+        year = 1975
+        }
+@book{book:1997:grigoriev,
+        author = "Grigoriev, I. S. AND Meilikhov, E. Z.",
+        title = "Handbook of Physical Quantities",
+        publisher = "CRC",
+	address = "Boca Raton, Florida",
+        year = 1997
+        }
+@article{misc:2002:macheret,
+        author = "Macheret, S. O. AND Shneider, M. N. AND Miles, R. B.",
+        TITLE = "Modeling of Air Plasma Generation by Repetitive High-Voltage Nanosecond Pulses",
+        journal = "IEEE Transactions on Plasma Science",
+        volume = 30,
+        number = 3,
+        pages = "1301--1314",
+        year = 2002
+        }
+@article{misc:1992:kossyi,
+        author = "Kossyi, A. AND Kostinsky, A. Y. AND Matveyev, A. A. AND Silakov, V. P.",
+        TITLE = "Kinetic Scheme of the Non-Equilibrium Discharge in Nitrogen-Oxygen Mixtures",
+        journal = "Plasma Sources Science and Technology",
+        volume = 1,
+        pages = "207--220",
+        year = 1992
+        }
+@article{misc:1997:aleksandrov,
+        author = "Aleksandrov, N. L. AND Bazelyan, E. M. AND Kochetov, I. V. AND Dyatko, N. A.",
+        TITLE = "The Ionization Kinetics and Electric Field in the Leader Channel in Long Air Gaps",
+        journal = "Journal of Physics D Applied Physics",
+        volume = 30,
+        pages = "1616--1624",
+        year = 1997
+        }
+@book{book:1997:bazelyan,
+        author = "Bazelyan, E. M. AND Raizer, Y. P.",
+        title = "Spark Discharge",
+        publisher = "CRC",
+        year = 1997,
+        address = "Boca Raton, Florida"
+        }
+@incollection{misc:1991:matzing,
+        author = "Matzing, H.",
+        editor = "Prigogine, I. AND Rice, S. A.",
+        title = "Chemical Kinetics of Flue Gas Cleaning by Irradiation with Electrons",
+        booktitle = "Advances in Chemical Physics",
+        volume = 80,
+        chapter = 4,
+        year = 1991,
+        pages = "315--402",
+        publisher = "John Wiley and Sons, Inc.",
+        address = "New York, NY"
+        }
+@conference{aiaaconf:1987:Bussing,
+        author = "Bussing, T. AND Eberhardt, S.",
+        title = "Chemistry Associated with Hypersonic Vehicles",
+        note = "AIAA Paper 87-1292",
+	month = jun,
+        year = 1987
+        }
+@conference{aiaaconf:1999:laux,
+        author = "Laux, C. O. AND Yu, L. AND Packan, D. M. AND Gessman, R. J. AND Pierrot, L. AND Kruger, C. H. AND Zare, R. N.",
+        title = "Ionization Mechanisms in Two-Temperature Air Plasmas",
+        note = "AIAA Paper 99-3476, presented at the 30th Plasmadynamics and Lasers Conference",
+	month = jun,
+        year = 1999
+        }
+@book{book:1989:anderson,
+        author = "Anderson, J. D.",
+        title = "Hypersonic and High-Temperature Gas Dynamics",
+        publisher = "McGraw-Hill",
+        year = 1989
+        }
+@article{misc:2000:bourdon,
+        author = "Bourdon, A. AND Vervisch, P.",
+        TITLE = "Analytical Models for Electron-Vibration Coupling in Nitrogen Plasma Flows",
+        journal = "Journal of Thermophysics and Heat Transfer",
+        volume = 14,
+        number = 4,
+        pages = "489--495",
+        year = 2000
+        }
+@article{jcp:2014:parent,
+        author = "Parent, B. AND Macheret, S. O. AND Shneider, M. N. ",
+        TITLE = "Electron and Ion Transport Equations in Computational Weakly-Ionized Plasmadynamics",
+        journal = "Journal of Computational Physics",
+		  year = 2014,
+        volume = 259,
+        pages = "51--69"
+        }
+
+@article{jpc:2006:mendez,
+        author = "Mendez, I. AND Gordillo-Vazquez, F. J. AND Herrero, V. J. AND Tanarro, I.  ",
+        TITLE = "Atom and Ion Chemistry in Low Pressure Hydrogen DC Plasmas",
+        journal = "Journal of Physical Chemistry A",
+    year = 2006,
+        volume = 110,
+        pages = "6060--6066"
+        }
+
+
