@@ -7,6 +7,13 @@ ________________________________________________________________________________
 _____________________________________________________________________________________________________
 
 
+2020 JUL 06b
+  * in model/chem/_Air_Plasma_6s_15r/
+    - added doc
+  * in model/chem/_Air_Plasma_8s_28r_Macheret/
+    - added doc
+    
+
 2020 JUL 06a
   * in lib/soap/soap.c
     - in functions_builtin(), changed the double format of the spline function to the standard
